# internal/handler/ping_handler.go
@@ -13,6 +13,7 @@ import (
 // @Produce plain
 // @Success 200 {string} string "pong"
 // @Failure 500 {string} string "Internal Server Error"
+// @Security BearerAuth
 // @Router /ping [get]
 func PingHandler(c *gin.Context) {
 	c.String(http.StatusOK, "pong")
